Bug 161878 - RTF import SYMBOL field wrongly imported before IF field
Summary: RTF import SYMBOL field wrongly imported before IF field
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: RTF-Fields
  Show dependency treegraph
 
Reported: 2024-07-03 05:41 UTC by Oliver Specht (CIB)
Modified: 2024-10-08 16:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Document containing a REF and a SYMBOL field inside of an IF field (50.42 KB, application/msword)
2024-07-03 05:41 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2024-07-03 05:41:05 UTC
Created attachment 195096 [details]
Document containing a REF and a SYMBOL field inside of an IF field

The attached document contains an IF field where the condition contains a REF fields in the condition and a paragraph break and a SYMBOL field in the THEN part.

The SYMBOL field is wrongly imported before the IF field.
Comment 1 Commit Notification 2024-07-30 20:41:39 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b8aad9781654a392b973690fb62f69433366c58

tdf#161878 Ignore nested SYMBOL field inside IF field

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Gabor Kelemen (Collabora) 2024-08-12 14:34:59 UTC
Verified in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 59cb37a210675d4269c2fcd48feeffe942538891
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

There is no extra bullet visible now.