tdf#161878 Ignore nested SYMBOL field inside IF field

Adds SYMBOL field to the list of content that cannot be nested into
an IF field. Prevents importing of SYMBOLs before the IF field.

Change-Id: I0c2f92d7893c189a42e835ffd4b9fd6e0e23a17b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169900
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Jenkins