sw/qa/extras/rtfexport/rtfexport8.cxx
@@ -616,6 +616,24 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf161864)
     verify();
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf161878)
+{
+    auto verify = [this]() {
+        //check that the IF field is a pos 2
+        uno::Reference<text::XTextDocument> xTextDocument(mxComponent, uno::UNO_QUERY);
+        uno::Reference<text::XText> xText = xTextDocument->getText();
+        uno::Reference<text::XTextCursor> xCursor = xText->createTextCursor();
+        uno::Reference<beans::XPropertySet> xPropSet(xCursor, uno::UNO_QUERY);
+        xCursor->goRight(2, false);
+        uno::Any xField = xPropSet->getPropertyValue("TextField");
+        CPPUNIT_ASSERT(xField.hasValue());
+    };
+    createSwDoc("tdf161878.rtf");
+    verify();
+    saveAndReload(mpFilter);
+    verify();
+}
+
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
 
